# poTranslation

./: .gitignore  README.md  messages.po  pyproject.toml
poTranslation/: __init__.py  cli.py
poTranslator/: cli.py
